--- a/Source/ToolsForHaul/ToolsForHaul.csproj
+++ b/Source/ToolsForHaul/ToolsForHaul.csproj
@@ -59,6 +59,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Static.cs" />
+    <Compile Include="WorkGivers\WorkGiver_HaulCorpses_WithAnimalCart.cs" />
+    <Compile Include="WorkGivers\WorkGiver_Haul_WithAnimalCart.cs" />
     <Compile Include="Zone_ParkingLot.cs" />
     <None Include="SpotlightTurret.cs" />
     <Compile Include="Designators\Designator_ZoneAddParkingLot.cs" />
@@ -82,16 +84,14 @@
     <Compile Include="Defs\HaulJobDefOf.cs" />
     <Compile Include="JobGivers\JobGiver_StealVehicle.cs" />
     <Compile Include="NoCCL\DetourAttribute.cs" />
-    <Compile Include="RightVehicle.cs" />
     <None Include="Things\SpotlightStuff.cs" />
-    <Compile Include="Things\Saddle\Designator_Board.cs" />
-    <Compile Include="Things\Textures.cs" />
+    <Compile Include="Vehicles\Designator_Board.cs" />
     <Compile Include="Command_VerbTarget.cs" />
-    <Compile Include="Things\Vehicle_CartGunTop.cs" />
-    <Compile Include="Things\Vehicle_Cart.cs" />
-    <Compile Include="Things\Vehicle_CartGun.cs" />
+    <Compile Include="Vehicles\Vehicle_CartGunTop.cs" />
+    <Compile Include="Vehicles\Vehicle_Cart.cs" />
+    <Compile Include="Vehicles\Vehicle_CartGun.cs" />
     <None Include="Toils\Class1.cs" />
-    <Compile Include="WorkGivers\WorkGiver_HaulCorpses_Vehicle.cs" />
+    <Compile Include="WorkGivers\WorkGiver_HaulCorpses_WithVehicle.cs" />
     <Compile Include="WorkGivers\WorkGiver_Refuel.cs" />
     <None Include="_inactive\_TESTING\Class1.cs" />
     <None Include="_inactive\_TESTING\Class2.cs" />
@@ -113,12 +113,12 @@
     <Compile Include="Detours\_ThinkNode_JobGiver.cs" />
     <Compile Include="Components\GameComponentToolsForHaul.cs" />
     <Compile Include="NoCCL\Detours.cs" />
-    <Compile Include="Utilities\ToolsForHaulUtility.cs" />
+    <Compile Include="TFH_Utility.cs" />
     <Compile Include="Trace.cs" />
     <Compile Include="JobDrivers\JobDriver_StandBy.cs" />
     <Compile Include="JobDrivers\JobDriver_HaulWithAnimalCart.cs" />
     <Compile Include="Toils\Toils_Cart.cs" />
-    <Compile Include="WorkGivers\WorkGiver_HaulWithCart.cs" />
+    <Compile Include="WorkGivers\WorkGiver_Haul_WithCart.cs" />
     <Compile Include="Components\CompMountable.cs" />
     <Compile Include="Designators\Designator_Mount.cs" />
     <Compile Include="ITabs\ITab_Pawn_VehicleGear.cs">
@@ -134,10 +134,9 @@
     <Compile Include="JobDrivers\JobDriver_Mount.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Toils\Toils_Collect.cs" />
-    <None Include="Things\Vehicle_CartOLD.cs" />
     <None Include="Designators\Designator_Board.cs" />
     <None Include="Designators\Designator_Move.cs" />
-    <Compile Include="Things\Saddle\Vehicle_Saddle.cs" />
+    <Compile Include="Vehicles\Vehicle_Saddle.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\..\About\About.xml">
@@ -164,15 +163,8 @@
     <Content Include="..\..\Defs\JoyGiverDefs\JoyGivers.xml">
       <Link>Defs\JoyGivers\JoyGivers.xml</Link>
     </Content>
-    <Content Include="..\..\Defs\KeyBindingDefs\KeyBindings.xml">
-      <Link>Defs\KeyBindingDefs\KeyBindings.xml</Link>
-    </Content>
     <Content Include="..\..\Defs\SoundDefs\Vehicle_Sustainers_Ambiences.xml">
       <Link>Defs\SoundDefs\Vehicle_Sustainers_Ambiences.xml</Link>
-    </Content>
-    <Content Include="..\..\Defs\StatDefs\Stats_Apparel.xml">
-      <Link>Defs\StatDefs\Stats_Apparel.xml</Link>
-      <SubType>Designer</SubType>
     </Content>
     <Content Include="..\..\Defs\StatDefs\Stats_Vehicle.xml">
       <Link>Defs\StatDefs\Stats_Vehicle.xml</Link>
