--- a/Source/ToolsForHaul/ToolsForHaul.csproj
+++ b/Source/ToolsForHaul/ToolsForHaul.csproj
@@ -62,6 +62,8 @@
     <None Include="AcEnhancedHauling.cs" />
     <Compile Include="Alerts\Alert_NoParkingLot.cs" />
     <Compile Include="Building_BattleBeacon.cs" />
+    <Compile Include="MoteThrown_TFH.cs" />
+    <Compile Include="MoteDefOf.cs" />
     <Compile Include="Components\CompFrontTex.cs" />
     <Compile Include="Components\CompProperties_Axle.cs" />
     <Compile Include="IncidentWorker\IncidentWorker_RaidFriendly.cs" />
@@ -127,7 +129,6 @@
     <None Include="Designators\Vehicle\Designator_Board.cs" />
     <Compile Include="Things\IncendiaryFuel.cs" />
     <None Include="_inactive\CompWeaponExtensions.cs" />
-    <None Include="_inactive\RA_PawnRenderer.cs" />
     <None Include="_inactive\CompTool.cs" />
     <None Include="JobGivers\JobGiver_Kidnap.cs" />
     <None Include="_ThinkNode_JobGiver.cs" />
@@ -178,11 +179,20 @@
       <Link>Defs\EffecterDefs\Effecter_Misc.xml</Link>
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="..\..\Defs\Effects\Mote_Special.xml">
+      <Link>Defs\Effects\Mote_Special.xml</Link>
+    </Content>
+    <Content Include="..\..\Defs\Effects\Mote_Visual.xml">
+      <Link>Defs\Effects\Mote_Visual.xml</Link>
+    </Content>
     <Content Include="..\..\Defs\JobDefs\Jobs_Misc.xml">
       <Link>Defs\JobDefs\Jobs_Misc.xml</Link>
     </Content>
     <Content Include="..\..\Defs\JoyGiverDefs\JoyGivers.xml">
       <Link>Defs\JoyGivers\JoyGivers.xml</Link>
+    </Content>
+    <Content Include="..\..\Defs\PawnKindDefs_Vehicles\PawnKinds_Vehicles.xml">
+      <Link>Defs\PawnKinds_Vehicles.xml</Link>
     </Content>
     <Content Include="..\..\Defs\SoundDefs\Vehicle_Sustainers_Ambiences.xml">
       <Link>Defs\SoundDefs\Vehicle_Sustainers_Ambiences.xml</Link>
@@ -217,9 +227,6 @@
       <Link>Defs\ThingDefs\Items_Unfinished.xml</Link>
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="..\..\Defs\ThingDefs\Mote_Special.xml">
-      <Link>Defs\ThingDefs\Mote_Special.xml</Link>
-    </Content>
     <Content Include="..\..\Defs\ThingDefs\Vehicle_Haul.xml">
       <Link>Defs\ThingDefs\Vehicle_Haul.xml</Link>
       <SubType>Designer</SubType>
@@ -233,6 +240,12 @@
     </Content>
     <Content Include="..\..\Defs\ThingDefs_Buildings\Buildings_Misc.xml">
       <Link>Defs\Buildings_Misc.xml</Link>
+    </Content>
+    <Content Include="..\..\Defs\ThingDefs_Races\Races_Vehicle.xml">
+      <Link>Defs\Races_Vehicle.xml</Link>
+    </Content>
+    <Content Include="..\..\Defs\ThingDefs_Races\Races_Vehicle_Base.xml">
+      <Link>Defs\Races_Vehicle_Base.xml</Link>
     </Content>
     <Content Include="..\..\Defs\WorkGiverDefs\WorkGivers.xml">
       <Link>Defs\WorkGivers.xml</Link>
